--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,9 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile files('libs/FlurryAnalytics-6.0.0.jar')
-    compile files('libs/InMobi-4.5.5.jar')
     compile files('libs/umeng-analytics-v5.5.3.jar')
     compile(name: 'AudienceNetwork', ext: 'aar')
+    compile(name: 'cmadsdk_world_base_V3.4.7', ext: 'aar')
     compile 'org.apache.httpcomponents:httpcore:4.4.2'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
