1.添加猎豹CM广告SDK

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile(name: 'cmadsdk_world_base_V3.4.7', ext: 'aar')
     compile 'org.apache.httpcomponents:httpcore:4.4.2'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.2.1'
     compile 'com.jaredrummler:android-processes:1.0.8'
+    compile files('libs/volley.jar')
 }
