--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,11 +37,9 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile files('libs/umeng-analytics-v5.5.3.jar')
     compile(name: 'AudienceNetwork', ext: 'aar')
     compile(name: 'cmadsdk_world_base_V3.4.7', ext: 'aar')
-    compile 'org.apache.httpcomponents:httpcore:4.4.2'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.android.gms:play-services-ads:9.2.1'
     compile 'com.jaredrummler:android-processes:1.0.8'
