--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:installLocation="auto"
     package="com.duduws.recent"
     android:versionCode="15"
     android:versionName="3.1.2" >
@@ -25,6 +26,7 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT"/>
     <!-- 发布版本使用的权限 end -->
 
     <!-- 监听开机广播 -->
@@ -32,7 +34,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/icon_app"
+        android:icon="@drawable/ic_ps"
         android:label="@string/app_name"
         android:theme="@android:style/Theme"
         android:name="com.emob.luck.view.AdApplication">
@@ -50,15 +52,14 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
 
-        <!--<activity-->
-            <!--android:name="com.emob.luck.view.MainActivity"-->
-            <!--android:label="@string/app_name" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
+        <activity
+            android:name="com.emob.luck.view.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="com.emob.luck.view.UsedAppsListActivity"
@@ -100,7 +101,10 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
-        <receiver android:name="com.emob.luck.AdsReceiver" >
+        <receiver android:name="com.emob.luck.AdsReceiver"
+                android:enabled="true"
+                android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
+                >
             <intent-filter>
                 <action android:name="com.mobi.intent.action.USER_DEFINE_LIVE"/>
             </intent-filter>
@@ -121,6 +125,17 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
 
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <!--<action android:name="android.intent.action.QUICKBOOT_POWERON" />-->
+                <!--<action android:name="android.intent.action.REBOOT"/>-->
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
         </receiver>
         <service android:name="com.mobi.fork.MainService" android:enabled="true" android:exported="true">
             <intent-filter>
@@ -133,11 +148,6 @@
         <service android:name="com.emob.luck.ReqService" />
         <service android:name="com.emob.luck.HeaService" />
 
-        <receiver android:name="com.emob.luck.BootBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
     </application>
 
 
