1.增加多渠道自动打包 2.切换服务器为阿里云香港主机

--- a/local.properties
+++ b/local.properties
@@ -10,3 +10,36 @@
 #Tue Jun 21 23:11:26 CST 2016
 ndk.dir=/Users/Pengz/Documents/Android/android-ndk-r9d
 sdk.dir=/Users/Pengz/Documents/Android/android-sdk-macosx
+#
+#渠道 c101 配置  猎豹渠道的ID需要在后面添加一个字母，否则通过properties读取出来会是一个null
+#
+version_c101=v1.101
+channel_c101=c101
+work_c101=w101
+product_c101=p101
+protocol_c101=protocol_101
+key_fb_c101=1667565620235545_1674504672874973
+key_cm_c101=1734101a
+key_admob_c101=ca-app-pub-2563657746943063/4972402233
+#
+#渠道 c102 配置
+#
+version_c102=v1.102
+channel_c102=c102
+work_c102=w102
+product_c102=p102
+protocol_c102=protocol_102
+key_fb_c102=1667565620235545_1670801169911990
+key_cm_c102=1734102a
+key_admob_c102=ca-app-pub-2563657746943063/3600073839
+#
+#渠道 c103 配置
+#
+version_c103=v1.103
+channel_c103=c103
+work_c103=w103
+product_c103=p103
+protocol_c103=protocol_103
+key_fb_c103=1667565620235545_1674504752874965
+key_cm_c103=1734103a
+key_admob_c103=ca-app-pub-2563657746943063/6449135434
