--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -8,14 +11,56 @@ android {
         applicationId "com.duduws.recent"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
+
+    productFlavors {
+        c101 {
+            manifestPlaceholders = [
+                APP_VERSION : properties.getProperty("version_c101"),
+                APP_CHANNEL_ID : properties.getProperty("channel_c101"),
+                APP_COOPERATION_ID : properties.getProperty("work_c101"),
+                APP_PRODUCT_ID : properties.getProperty("product_c101"),
+                APP_PROTOCOL : properties.getProperty("protocol_c101"),
+                SDK_KEY_FACEBOOK : properties.getProperty("key_fb_c101"),
+                SDK_KEY_CM : properties.getProperty("key_cm_c101"),
+                SDK_KEY_ADMOB : properties.getProperty("key_admob_c101")
+            ]
+        }
+        c102 {
+            manifestPlaceholders = [
+                APP_VERSION : properties.getProperty("version_c102"),
+                APP_CHANNEL_ID : properties.getProperty("channel_c102"),
+                APP_COOPERATION_ID : properties.getProperty("work_c102"),
+                APP_PRODUCT_ID : properties.getProperty("product_c102"),
+                APP_PROTOCOL : properties.getProperty("protocol_c102"),
+                SDK_KEY_FACEBOOK : properties.getProperty("key_fb_c102"),
+                SDK_KEY_CM : properties.getProperty("key_cm_c102"),
+                SDK_KEY_ADMOB : properties.getProperty("key_admob_c102")
+            ]
+        }
+        c103 {
+            manifestPlaceholders = [
+                APP_VERSION : properties.getProperty("version_c103"),
+                APP_CHANNEL_ID : properties.getProperty("channel_c103"),
+                APP_COOPERATION_ID : properties.getProperty("work_c103"),
+                APP_PRODUCT_ID : properties.getProperty("product_c103"),
+                APP_PROTOCOL : properties.getProperty("protocol_c103"),
+                SDK_KEY_FACEBOOK : properties.getProperty("key_fb_c103"),
+                SDK_KEY_CM : properties.getProperty("key_cm_c103"),
+                SDK_KEY_ADMOB : properties.getProperty("key_admob_c103")
+            ]
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled true
+            zipAlignEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles 'proguard-project.txt'
         }
     }
 
