--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,32 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+            android:value="1667565620235545"/>
+
+        <meta-data
+            android:name="APP_VERSION"
+            android:value="${APP_VERSION}"/>
+        <meta-data
+            android:name="APP_CHANNEL_ID"
+            android:value="${APP_CHANNEL_ID}"/>
+        <meta-data
+            android:name="APP_COOPERATION_ID"
+            android:value="${APP_COOPERATION_ID}"/>
+        <meta-data
+            android:name="APP_PRODUCT_ID"
+            android:value="${APP_PRODUCT_ID}"/>
+        <meta-data
+            android:name="APP_PROTOCOL"
+            android:value="${APP_PROTOCOL}"/>
+        <meta-data
+            android:name="SDK_KEY_FACEBOOK"
+            android:value="${SDK_KEY_FACEBOOK}"/>
+        <meta-data
+            android:name="SDK_KEY_CM"
+            android:value="${SDK_KEY_CM}"/>
+        <meta-data
+            android:name="SDK_KEY_ADMOB"
+            android:value="${SDK_KEY_ADMOB}"/>
 
         <activity android:name="com.facebook.ads.InterstitialAdActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
